Update dependencies and Java version